# hsfs

./: .gitignore  Makefile.am  Makefile.common  README  configure.ac  index.html  params.json
enfs/: README
enfs/2.6.18-92.el5/: delegation.c  delegation.h  fscache.c  fscache.h  inode.c  internal.h  namespace.c  nfs2xdr.c  nfs3proc.c  nfsroot.c  pagelist.c  super.c  unlink.c
enfs/2.6.9-42.EL/: Makefile  callback_xdr.c  delegation.c  dir.c  direct.c  idmap.c  mount_clnt.c  nfs2xdr.c  nfs3.h  nfs3xdr.c  nfs_fs_i.h  nfs_fs_sb.h  nfs_page.h  nfsroot.c  symlink.c  unlink.c
fuse/: Makefile.am  apis.h  fuse_misc.h  hsfs_fuse_table.c  hsfs_main.c  hsi_nfs3_fsinfo.c  hsi_nfs3_link.c  hsi_nfs3_mkdir.c  hsi_nfs3_mknod.c  hsi_nfs3_pathconf.c  hsi_nfs3_read.c  hsi_nfs3_readlink.c  hsi_nfs3_rename.c  hsi_nfs3_rmdir.c  hsi_nfs3_statfs.c  hsi_nfs3_symlink.c  hsi_nfs3_unlink.c  hsi_nfs3_write.c  hsx_fuse_access.c  hsx_fuse_create.c  hsx_fuse_fill_reply.c  hsx_fuse_forget.c  hsx_fuse_getattr.c  hsx_fuse_getxattr.c  hsx_fuse_init.c  hsx_fuse_link.c  hsx_fuse_lookup.c  hsx_fuse_mkdir.c  hsx_fuse_mknod.c  hsx_fuse_open.c  hsx_fuse_opendir.c  hsx_fuse_read.c  hsx_fuse_readdir.c  hsx_fuse_readlink.c  hsx_fuse_release.c  hsx_fuse_rename.c  hsx_fuse_rmdir.c  hsx_fuse_setattr.c  hsx_fuse_setxattr.c  hsx_fuse_stat2iattr.c  (+4 more)
hsfs/: callback.c  callback_proc.c  file.c  hsfs_inode.c  inode.c  nfs3acl.c  nfs3proc.c  nfs_fs.h  nfs_mount.h  nfs_xdr.h  pagelist.c  proc.c  read.c  write.c
include/: acl.h  fstab.h  hashtable.h  hsfs.h  hsi_nfs3.h  hsi_nfs3.h.bak  hsx_fuse.h  log.h
include/hsfs/: bitops.h  compiler.h  err.h  hash.h  hashtable.h  hsi_nfs.h  list.h  log2.h  types.h
lib/: Makefile.am  hsfs_inode.c
man/: Makefile.am  hsfs.5  mount.hsfs.8
memcached/: Makefile.am  hsi_mem_init.c
mount/: Makefile  conn.c  nfs_mntent.h  nfsumount.c
nfs3/: Makefile.am  README  acl3.x  config.h  conn.h  fstab.c  hsfs.c  hsfs.h  hsfsmount.c  hsi_acl3.c  hsi_nfs3_access.c  hsi_nfs3_create.c  hsi_nfs3_fattr2stat.c  hsi_nfs3_fsinfo.c  hsi_nfs3_getattr.c  hsi_nfs3_getxattr.c  hsi_nfs3_link.c  hsi_nfs3_lookup.c  hsi_nfs3_mkdir.c  hsi_nfs3_mknod.c  hsi_nfs3_mount.c  hsi_nfs3_pathconf.c  hsi_nfs3_read.c  hsi_nfs3_readdir.c  hsi_nfs3_readlink.c  hsi_nfs3_rename.c  hsi_nfs3_rmdir.c  hsi_nfs3_setattr.c  hsi_nfs3_setxattr.c  hsi_nfs3_stat2iattr.c  hsi_nfs3_stat2sattr.c  hsi_nfs3_statfs.c  hsi_nfs3_symlink.c  hsi_nfs3_unlink.c  hsi_nfs3_write.c  mount.c  nfs3.x  nfs_mntent.c  nfsmount.c
nfs_common/: Makefile  Makefile.am  client.c  dir.c  direct.c  file.c  hsi_nfs_getroot.c  hsi_nfs_inode.c  nfs3xdr.c  nfs4_fs.h  nfs4proc.c  nfs4state.c  nfs4xdr.c  proc.c  read.c  sysctl.c  write.c
nfs_v3/: nfs.h  nfs.x  nfs_clnt.c  nfs_svc.c  nfs_xdr.c
patches/rdirplus-kernel/: 0000-cover-letter.patch  0001-fuse-implement-NFS-like-readdirplus-support.patch  0002-FUSE-Adapt-readdirplus-to-application-usage-patterns.patch
patches/rdirplus-user/: 0000-cover-letter.patch  0001-Add-no_-auto_inval_data-mount-option.patch  0002-Readdirplus-support-for-fuse_lowlevel_ops.patch
